--- a/GayCubes.vcxproj.filters
+++ b/GayCubes.vcxproj.filters
@@ -21,5 +21,13 @@
     <ClCompile Include="C:\Users\Linden\Downloads\glad\src\glad.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Input.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Input.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
