create shader program
glsl files are doing nothing at this point

--- a/GayCubes.vcxproj.filters
+++ b/GayCubes.vcxproj.filters
@@ -36,4 +36,8 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="shaders\test.glsl" />
+    <None Include="shaders\testFrag.glsl" />
+  </ItemGroup>
 </Project>
