--- a/GayCubes.vcxproj
+++ b/GayCubes.vcxproj
@@ -148,6 +148,10 @@
     <ClInclude Include="Color.h" />
     <ClInclude Include="Input.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="shaders\test.glsl" />
+    <None Include="shaders\testFrag.glsl" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
