--- a/GayCubes.vcxproj
+++ b/GayCubes.vcxproj
@@ -145,18 +145,21 @@
     <ClCompile Include="libraries\stb_image.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="ShaderProgram.cpp" />
+    <ClCompile Include="Texture.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Color.h" />
     <ClInclude Include="Input.h" />
     <ClInclude Include="libraries\stb_image.h" />
     <ClInclude Include="ShaderProgram.h" />
+    <ClInclude Include="Texture.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="shaders\rainbowVertex.glsl" />
     <None Include="shaders\rainbowFrag.glsl" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="textures\awesomeface.png" />
     <Image Include="textures\container.jpg" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
