super basic light color, draw light block

--- a/GayCubes.vcxproj
+++ b/GayCubes.vcxproj
@@ -159,6 +159,8 @@
     <ClInclude Include="Time.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="shaders\lightFrag.glsl" />
+    <None Include="shaders\lightVertex.glsl" />
     <None Include="shaders\rainbowVertex.glsl" />
     <None Include="shaders\rainbowFrag.glsl" />
   </ItemGroup>
