--- a/GayCubes.vcxproj.filters
+++ b/GayCubes.vcxproj.filters
@@ -69,6 +69,8 @@
   <ItemGroup>
     <None Include="shaders\rainbowVertex.glsl" />
     <None Include="shaders\rainbowFrag.glsl" />
+    <None Include="shaders\lightFrag.glsl" />
+    <None Include="shaders\lightVertex.glsl" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="textures\container.jpg">
