--- a/GayCubes.vcxproj
+++ b/GayCubes.vcxproj
@@ -144,6 +144,7 @@
     <ClCompile Include="Input.cpp" />
     <ClCompile Include="libraries\glad.c" />
     <ClCompile Include="libraries\stb_image.cpp" />
+    <ClCompile Include="Light.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Material.cpp" />
     <ClCompile Include="Mesh.cpp" />
@@ -157,6 +158,7 @@
     <ClInclude Include="Color.h" />
     <ClInclude Include="Input.h" />
     <ClInclude Include="libraries\stb_image.h" />
+    <ClInclude Include="Light.h" />
     <ClInclude Include="Material.h" />
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="Renderer.h" />
