--- a/GayCubes.vcxproj.filters
+++ b/GayCubes.vcxproj.filters
@@ -91,8 +91,8 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="shaders\rainbowVertex.glsl" />
-    <None Include="shaders\rainbowFrag.glsl" />
+    <None Include="shaders\litVertex.glsl" />
+    <None Include="shaders\litFrag.glsl" />
     <None Include="shaders\lightFrag.glsl" />
     <None Include="shaders\lightVertex.glsl" />
   </ItemGroup>
